2008-07-21  Wakaba  <wakaba@suika.fam.cx>

	* Input.pm (full_subdocument_index): New method, for the
	support of hierarchical subdocument numbers.
	(start_section): Use hierarhical subdocument numbers for
	section headings.
	
	* Output.pm (http_header, http_error, html_header): New methods.

2008-07-21  Wakaba  <wakaba@suika.fam.cx>

	* Output.pm (start_section, end_section): "role" option
	implemented.  Automatical rank setting implemented.
	(start_error_list, end_error_list): New.
	(add_source_to_parse_error_list): New.

	* Result.pm: "Unknown location" message text changed.

2008-07-21  Wakaba  <wakaba@suika.fam.cx>

	* Result.pm (add_label): Output error-level description
	text before the description of the error itself, which
	is originally coded in get_error_level_label, which in turn
	comes from cc.cgi at first.
	(get_error_level_label): Removed.

2008-07-21  Wakaba  <wakaba@suika.fam.cx>

	* Input.pm: A new subclass for subdocuments are added.
	Methods for information sections are added (from cc.cgi).

	* Output.pm (code): Support for attributes.
	(script, dt): New methods.
	(node_link): New method (from get_node_link in WebHACC::Result,
	which comes from cc.cgi).

	* Result.pm (add_error): Show some text even if no location
	infomration is available.  Use input object, if available, 
	as fallback for location information.
	(get_error_label, get_node_path, get_node_link): Removed.
	The first method is no longer used.  The latters are now
	supported as |node_link| method in WebHACC::Output.

2008-07-21  Wakaba  <wakaba@suika.fam.cx>

	* Input.pm (generate_transfer_sections, generate_http_header_section):
	New (partially comes from cc.cgi).

	* Output.pm (link): Call |start_tag| such that attributes
	can be set.
	(link_to_webhacc): New.
	(encode_url_component): From WebHACC::Language::Base.

	* Result.pm: Support for error outputting and result table
	generation.

2008-07-20  Wakaba  <wakaba@suika.fam.cx>

	* ChangeLog: New file.
